# Genesis

./: CMakeLists.txt  DESIGN.md  README.md  run_tests.sh
docs/: DESIGN.md
src/: CMakeLists.txt  lexer.cc  lexer.cpp  lexer.h  main.cpp  token.h
test/: lexeme_test.cpp
tests/: CMakeLists.txt  lexer_test.cc
